--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
 	],
 	"require": {
 		"php": ">=5.3.0",
-		"colinmollenhour/credis": "dev-master"
+		"colinmollenhour/credis": "~1.2"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*"
